悬浮窗初版功能完毕,bug修复 ui优化